--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
 <body>
   
   <h1 class="bg-red-600">Hello Angulr</h1>
-  <button mat-raised-button color="primary">Basic</button>
+  <button>Basic</button>
   <h1>{{a+b}}</h1>
-  <app-home></app-home>
   <app-header></app-header>
+  <app-home></app-home>
 
 </body>
 </html>
