--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,14 @@
 </head>
 <body>
   
-  <h1 class="bg-red-600">Hello Angulr</h1>
-  <button>Basic</button>
-  <h1>{{a+b}}</h1>
+  <!-- <h1 class="bg-red-600">Hello Angulr</h1> -->
+  <!-- <button>Basic</button> -->
+  <!-- <h1>{{a+b}}</h1> -->
+   
   <app-header></app-header>
-  <app-home></app-home>
+
+
+  <!-- <app-home></app-home> -->
 
 </body>
 </html>
