--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -11,6 +11,6 @@
                 <span class="px-1"><s> Rs {{product.sprice}}</s></span>
                 <span> ({{product.dis}}) OFF</span>
             </div>
-            <button class="bg-sky-600 text-white px-5 py-1 rounded-md mt-2">Buy Now</button>
+            <button (click)="view()" class="bg-sky-600 text-white px-5 py-1 rounded-md mt-2">Buy Now</button>
         </div>
     </div>
